# IntegraMech

./: Dockerfile.BackEnd  Dockerfile.back  Dockerfile.front  IntegraMech.sln  LICENSE  MINI_MUNDO.md  README.md  TODOS.md  docker-compose.yml  nginx.conf  wait_for_db.sh
.github/workflows/: tests.yml
BackEnd/: Back.sln  BackEnd.csproj  GlobalUsings.cs  README.md  Startup.cs  appsettings.Testing.json  appsettings.json  s.sql
BackEnd/Code/: appsettings.Development.json
BackEnd/Configs/: SwaggerConfigs.cs
BackEnd/Controllers/: CidadesController.cs  DepartamentosController.cs  EspecialidadesController.cs  EstadiasController.cs  GenerosController.cs  HomeController.cs  MedicosController.cs  PacientesController.cs  QuartosController.cs
BackEnd/Database/: CidadeConfig.cs  DepartamentoConfig.cs  DepartamentoMedicoConfig.cs  EnderecoConfig.cs  EspecialidadeConfig.cs  EstadiaConfig.cs  EstadoConfig.cs  GeneroConfig.cs  MechDbContext.cs  MedicoConfig.cs  PacienteConfig.cs  (+4 more)
Code/: Code.csproj  Program.cs  Startup.cs  s.sql
DS/emergency-classification/: .gitignore  pyproject.toml
DS/emergency-classification/emergency_classification/data/interim/: transformation.py
DS/emergency-classification/emergency_classification/data/raw/: loading_data.py
DS/emergency-classification/emergency_classification/notebooks/: etl.ipynb
Features/: Departamentos.feature  Estadias.feature  Medicos.feature  Pacientes.feature
FrontEnd/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Tests/: GlobalUsings.cs  Tests.csproj
(+151 files in other folders)
